--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,6 +30,7 @@ dependencies {
     implementation 'com.ss.bannerslider:bannerslider:1.8.0'
     implementation 'com.orhanobut:hawk:2.0.1'
     implementation 'com.jakewharton:butterknife:8.8.1'
+    implementation 'com.android.support:support-v4:27.0.2'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
 
 }
